--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,28 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Adress Book</title>
   </head>
   <body>
+    <header id="header"></header>
+    <div class="card">
     <h1>Contacts</h1>
     <button id="add-contact">Add Contact</button>
+    <form id="new-contact-form">
+      <label for="name">Name</label>
+      <input id="name" name="name" type="text">
+      <label for="email">Email</label>
+      <input id="email" name="email" type="email">
+      <label for="phone">Phone</label>
+      <input id="phone" name="phone" type="text">
+      <label for="company">Company</label>
+      <input id="company" name="company" type="text">
+      <label for="notes">Notes</label>
+      <textarea id="notes" name="notes" type="text"></textarea>
+      <label for="twitter">Twitter</label>
+      <input id="twitter" name="twitter" type="text">
+    </form>
+  </div>
   </body>
 </html>
