--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <header id="header"></header>
     <div class="card">
     <h1>Contacts</h1>
-    <button id="add-contact">Add Contact</button>
+    <button id="add-contact">Add Contact...</button>
     <form id="new-contact-form">
       <label for="name">Name</label>
       <input id="name" name="name" type="text">
@@ -27,6 +27,8 @@
       <input id="twitter" name="twitter" type="text">
       <input id="submit" type="submit" value="Save contact">
     </form>
+    <div id="contact-list"></div>
+    <script src="./assets/js/app.js"></script>
   </div>
   </body>
 </html>
