added even more styling

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   <body>
     <header id="header"></header>
     <div class="card">
+      <div class="heart"></div>
     <h1>Contacts</h1>
     <button id="add-contact">Add Contact...</button>
     <form id="new-contact-form">
